# fibonacci_primes

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
competitors/: config.json  run_rust.sh
competitors/aleph_alpha/: .gitignore  main.c
competitors/anders_kaseorg/: Cargo.toml
competitors/anders_kaseorg/src/: main.rs
competitors/example/: Cargo.toml
competitors/example/src/: main.rs
src/: main.rs
