[package]
name = "fibonacci_primes"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ['aiden2207']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
nalgebra = "0.31"
num-bigint = "0.4"
once_cell = "1"
tokio = {version ="1", features = ["process", "rt","rt-multi-thread", "macros", "io-util", "time"]}
serde = {version ="1", features = ["derive"]}
serde_json = {version ="1"}